--- a/package/emortal/autocore/files/x86/index.htm
+++ b/package/emortal/autocore/files/x86/index.htm
@@ -52,7 +52,7 @@
 
 		local user_info = luci.sys.exec("cat /proc/net/arp | grep '0x2' | wc -l") or 0
 		
-		local cpu_usage = luci.sys.exec("top -n1 | awk '/^CPU/ {printf(\"%d%%\", 100 - $8)}'") or "6%"
+		local cpu_usage = luci.sys.exec("top -n1 | awk '/^CPU/ {printf(\"%d%\", 100 - $8)}'") or "6%"
 
 		local rv = {
 			cpuusage    = cpu_usage,
